# ai-edge-contest4

./: README.md
app/fpn_eval/: .gitignore
app/fpn_eval/src/: main.cc
app/fpn_video/: Makefile
app/fpn_video/src/: main.cc
data/bdd100k/seg/: glob_files.py  test_files.txt  train_files.txt  val_files.txt
data/signate/: train_basefiles.txt  val_basefiles.txt
dpu_info/: ULTRA96V2.json
files/Segment/VAI/FPN/: float.prototxt  float_test.prototxt  quantize_and_compile.sh  test_float_and_quantized.sh
files/Segment/VAI/FPN/compile/: compile.txt  segmentation_kernel_graph.gv
files/Segment/VAI/FPN/quantize/: deploy.prototxt  quantize.txt  quantize_train_test.prototxt
files/Segment/VAI/FPN/test_results/: float_model_test.txt  quantized_model_test.txt
files/Ultra96/: NOTE.md
files/Ultra96/FPN/: README.md
files/Ultra96/FPN/fpn_eval/: .gitignore  Makefile
files/Ultra96/FPN/fpn_eval/src/: main.cc
files/Ultra96/FPN/fpn_video/: change_resolution.sh
files/Ultra96/dpu_info/: ULTRA96V2.dcf  ULTRA96V2.hwh  ULTRA96V2.json
files/ZCU102/samples/fpn_eval/: Makefile
report/: 1_introduction.tex  2_HW_impl.tex  3_SW_impl.tex  4_evaluation.tex  5_conclusion.tex  README.md  compile.sh  main.bib  main.tex
submission_material/: area.txt  readme.txt  result.txt  usage.md
training/: datasets.py  fpn_resnet18.py  train.py
training/class_weights/: bdd100k_class_weights.pkl  calc_bdd100k_class_weights.py  calc_signate_class_weights.py  signate_class_weights.pkl
training/evaluation/: eval_on_val.py
training/training_logs/bdd100k/: epoch_losses_train.pkl  epoch_losses_val.pkl
training/utils/: utils.py  viz_graph.py
utils/caffe_pytorch_conversion/: convert_from_npy_to_caffe.py  convert_from_npy_to_pytorch.py  extract_caffe_to_npy.py  extract_pytorch_to_npy.py
utils/gen_signate_dat/: CMakeLists.txt
utils/gen_signate_dat/src/: gen_dat.cpp
utils/make_label_img_cpp/: compile.sh  make_label.cpp
(+49 files in other folders)
